ola-parser/src/testdata/syntaxTests/inheritance/virtual/modifier_virtual_err.sol
library test {
    modifier m virtual;
    fn f() m  {
    }
}
// ----
// TypeError 3275: (19-38): Modifiers in a library cannot be virtual.
